# irods_rule_engine_plugin_audit_amqp

./: .gitignore  1  CMakeLists.txt  LICENSE  README.md  add_audit_rule_engine_to_rule_engines.py  irods_consortium_continuous_integration_build_hook.py  irods_consortium_continuous_integration_test_hook.py  libirods_rule_engine_plugin-audit_amqp.cpp  run_qpidd.sh  sample_configuration.json
include/irods/private/: amqp_sender.hpp  audit_amqp.hpp  audit_b64enc.hpp
packaging/: audit_plugin_message_worker.py  message_broker_consumer.py  postinst  queue_listener.py  run_audit_plugin_test.py  test_audit_plugin.py  test_plugin_audit_amqp.py  test_plugin_audit_amqp_server_config.json
src/: amqp_sender.cpp  libirods_rule_engine_plugin-audit_amqp.cpp  libre-audit-amqp.cpp  main.cpp
unit_tests/: CMakeLists.txt
unit_tests/b64enc/: b64enc.cmake  b64enc.cpp
unit_tests/catch2_compat_include/catch2/: catch_all.hpp
